Notebook updated, image deleted

--- a/docs/code_archive/programming_concepts/hash_maps.ipynb
+++ b/docs/code_archive/programming_concepts/hash_maps.ipynb
@@ -54,9 +54,7 @@
    "id": "cab093ab-4d7b-4b46-8de2-8f545dab1222",
    "metadata": {},
    "source": [
-    "# Hash Function example\n",
-    "<img src=\"./hash_map.png\"/>\n",
-    "\n"
+    "# Hash Function example"
    ]
   },
   {
@@ -64,8 +62,6 @@
    "id": "9d40b20d-e3f7-4dc4-99be-627035a46eb1",
    "metadata": {},
    "source": [
-    "Example from the image:\n",
-    "\n",
     "Key         =>  gar                \n",
     "\n",
     "Hashed into =>  [\"g\", \"a\", \"r\"]      \n",
